--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-    background-image: url("table.png");
+    background-image: url("wallpaperbetter.jpg");
     background-size: cover;
     font-weight: bold;
     color: white;
