--- a/index.css
+++ b/index.css
@@ -3,10 +3,10 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
     background-image: url("wallpaperbetter.jpg");
-    /*background-size: cover;*/
+    background-size: cover;
     font-weight: bold;
     color: white;
-    text-align: center;
+    /*text-align: center;*/
     min-height: 100vh;
     display: flex;
     flex-direction: column;
