--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     background-size: cover;
     font-weight: bold;
     color: white;
-    /*text-align: center;*/
+    text-align: center;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
