--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 h1 {
-    color: goldenrod;
+    color: brown;
 }
 
 #message-el {
@@ -21,10 +21,10 @@ h1 {
 }
 
 button {
-    color: #016f32;
+    color: white;
     cursor: pointer;
     width: 150px;
-    background: goldenrod;
+    background: brown;
     padding-top: 5px;
     padding-bottom: 5px;
     font-weight: bold;
